--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-python-telegram-bot==20.7
-Pillow
-reportlab
-pdf2docx
-openpyxl
-weasyprint
-requests
-qrcode[pil]
-gtts
-PyPDF2
-httpx
+python-telegram-bot==21.5
+Pillow==10.4.0
+reportlab==4.2.2
+pdf2docx==1.0.1
+openpyxl==3.1.2
+weasyprint==60.1
+requests==2.31.0
+qrcode[pil]==7.4.2
+gtts==2.4.0
+PyPDF2==3.0.1
+httpx==0.27.0
